--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <img src="https://i.ibb.co/SsR9fYr/hd-texture-pack-kb.png" alt="photo" width="370" border="2">
 <hr>
 <img src="https://i.ibb.co/hg9B761/maxresdefault-8.jpg" alt="pvp texture pack" width="370" border="2">
-<center><a href="Texture Pack Photos.html" style="color:rgb(137, 162, 232)">For More Texture Pack photos click here</a>
+<center><a href="Texture Pack Photos.html" style="color:rgb(137, 162, 232)"><img src="https://i.ibb.co/7Wwdv46/20230819-195531.png" width="250"></a>
 </cente>
 <hr>
 
