--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <hr>
 <img src="https://i.ibb.co/hg9B761/maxresdefault-8.jpg" alt="pvp texture pack" width="370" border="2">
 <center><a href="Texture Pack Photos.html" style="color:rgb(137, 162, 232)"><img src="https://i.ibb.co/7Wwdv46/20230819-195531.png" width="250"></a>
-</cente>
+</center>
 <hr>
 
 <h2 style="color:rgb(28, 73, 199)"> <center> How to make your own texture pack </center> </h2>
